Bug fixing; restrict to board, wrong color

--- a/app/styles/canvas.scss
+++ b/app/styles/canvas.scss
@@ -1,3 +1,6 @@
+body {
+}
+
 #statsCanvas {
   float: left;
   border: 1px solid black;
